welcome.lessons.welcome.bat.bool2.TwoAsOne.scala.error
twoAsOne:3: error: 'case' expected but '(' found.
		(x,y,z) if (x==c || y==a || z==b)	=> return true
                ^twoAsOne:4: error: '}' expected but ';' found.
		(_,_,_)						=> return false
^twoAsOne:7: error: eof expected but '}' found.
 }
 ^