welcome.lessons.welcome.bat.bool2.TwoAsOne.scala.code
def twoAsOne(a:Int, b:Int, c:Int):Boolean = {
	(a+b,b+c,c+a) match {
		(x,y,z) if (x==c || y==a || z==b)	=> return true
		(_,_,_)						=> return false
	}
}